--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movieapp",
-  "homepage": "https://azazel-01.github.io/MovieApp",
+  "homepage": "https://AzAzEL-01.github.io/MovieApp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,11 +8,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build ",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
-    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
